# DalScooter

./: .gitignore  .terraform.lock.hcl  README.md  main.tf  terraform.tfstate  terraform.tfstate.backup
.github/workflows/: main.yml
Frontend/: frontend.tf  package-lock.json  package.json
Frontend/cognito-auth-frontend/: .env  package-lock.json  package.json
Frontend/src/: App.js
Notifications/: main.tf  outputs.tf  variables.tf
bike_management/: api_gateway.tf  main.tf  outputs.tf  variables.tf
bike_management/lambda_functions/: book_bike.py  check_availability.py  get_bikes.py  manage_bikes.py
cognito/: cognito.tf  cognito_stack.yaml  lambda_pseudocode.txt  verify_auth_lambda.py
cognito/auth_test/: Cargo.toml
cognito/auth_test/src/: get_session.rs  main.rs
cognito/functions/: create_auth_lambda.py  define_auth_lambda.py  post_confirmation_lambda.py  pre_sign_up_lambda.py
data_visualization_and_analytics/: data_vis.tf  main.tf  outputs.tf
data_visualization_and_analytics/functions/: get_feedback.py  submit_feedback.py
frontend/: .env  .gitignore  eslint.config.mjs  frontend.tf  package-lock.json  package.json
frontend/.next/: app-build-manifest.json  prerender-manifest.json  trace
message_passing/: forward_message_lambda.py  message_passing.tf  outputs.tf
virtual_assiatant/: main.tf  outputs.tf
virtual_assiatant/lambda_functions/: booking_handler.py
virtual_assiatant/scripts/: init_knowledge_base.py
virtual_assistant/: main.tf  outputs.tf  variables.tf
virtual_assistant/lambda_functions/: booking_handler.py  concern_handler.py  (+1 more)
(+158 files in other folders)
